--- a/samples/openthread/coap_client/overlay-multiprotocol_ble.conf
+++ b/samples/openthread/coap_client/overlay-multiprotocol_ble.conf
@@ -4,7 +4,10 @@
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 #
 
-# Enable multiprotocol
+# Enable multiprotocol related sample code
+CONFIG_MULTIPROTOCOL_SUPPORT=y
+
+# Enable multiprotocol itself
 CONFIG_BT_LL_NRFXLIB_DEFAULT=y
 
 # Enable Bluetooth
