--- a/samples/openthread/coap_client/prj.conf
+++ b/samples/openthread/coap_client/prj.conf
@@ -79,3 +79,8 @@ CONFIG_COAP_UTILS=y
 CONFIG_COAP_CLIENT_LOG_LEVEL_DBG=y
 CONFIG_COAP_CLIENT_UTILS_LOG_LEVEL_DBG=y
 CONFIG_COAP_UTILS_LOG_LEVEL_DBG=y
+
+####
+CONFIG_BT=y
+CONFIG_BT_LL_NRFXLIB_DEFAULT=y
+CONFIG_SOC_FLASH_NRF_LL_NRFXLIB=y
