--- a/samples/openthread/coap_server/prj.conf
+++ b/samples/openthread/coap_server/prj.conf
@@ -78,3 +78,10 @@ CONFIG_OPENTHREAD_COAP=y
 # Configure sample logging setting
 CONFIG_COAP_SERVER_LOG_LEVEL_DBG=y
 CONFIG_OT_COAP_UTILS_LOG_LEVEL_DBG=y
+
+####
+CONFIG_BT=y
+CONFIG_BT_LL_NRFXLIB_DEFAULT=y
+CONFIG_SOC_FLASH_NRF_LL_NRFXLIB=y
+
+CONFIG_DEBUG_OPTIMIZATIONS=y
