Move cert overlay file to root cli folder

--- a/samples/openthread/cli/overlay-cert_mi.conf
+++ b/samples/openthread/cli/overlay-cert_mi.conf
@@ -12,3 +12,5 @@ CONFIG_SHELL_DEFAULT_TERMINAL_WIDTH=256
 
 # Disable openthread autostart
 CONFIG_OPENTHREAD_MANUAL_START=y
+
+CONFIG_SOC_FLASH_NRF_LL_NRFXLIB=y
