--- a/samples/openthread/cli/overlay-cert_mi.conf
+++ b/samples/openthread/cli/overlay-cert_mi.conf
@@ -13,4 +13,6 @@ CONFIG_SHELL_DEFAULT_TERMINAL_WIDTH=256
 # Disable openthread autostart
 CONFIG_OPENTHREAD_MANUAL_START=y
 
-CONFIG_SOC_FLASH_NRF_LL_NRFXLIB=y
+# Enable longer commands
+CONFIG_SHELL_ARGC_MAX=26
+CONFIG_SHELL_CMD_BUFF_SIZE=416
