samples: openthread: switch to use oberon in vanilla OT
Changed to use oberon for AES. when building nrf_security for vanilla
openthread. This speeds up crypto ops a lot.

Signed-off-by: Marek Porwisz <marek.porwisz@nordicsemi.no>

--- a/samples/openthread/cli/vanilla_nrf_sec.conf
+++ b/samples/openthread/cli/vanilla_nrf_sec.conf
@@ -6,26 +6,23 @@
 
 #Settings for generating crypto libraries for the Vanilla Openthread
 
-CONFIG_MBEDTLS_AES_ROM_TABLES=y
-CONFIG_MBEDTLS_VANILLA_BACKEND=y
+CONFIG_NEWLIB_LIBC=n
+CONFIG_MINIMAL_LIBC=y
+
+CONFIG_OBERON_BACKEND=y
 
 CONFIG_MBEDTLS_SSL_CIPHERSUITES="MBEDTLS_TLS_ECJPAKE_WITH_AES_128_CCM_8"
-# CONFIG_MBEDTLS_PK_C=y
-# CONFIG_MBEDTLS_PK_WRITE_C=y
 
 CONFIG_MBEDTLS_X509_LIBRARY=y
 CONFIG_MBEDTLS_TLS_LIBRARY=y
 CONFIG_CC3XX_MBEDTLS_AES_C=n
-
-CONFIG_VANILLA_MBEDTLS_AES_C=y
-CONFIG_CHOICE_VANILLA_MBEDTLS_CMAC_C=y
+# this generates a warning when not using vanill mbedtls backend
+# but is left here in case not to forget it when enabling aes on mbedtls
+CONFIG_MBEDTLS_AES_ROM_TABLES=y
+CONFIG_OBERON_MBEDTLS_AES_C=y
+CONFIG_CHOICE_OBERON_MBEDTLS_CMAC_C=y
 
 CONFIG_MBEDTLS_CIPHER_MODE_XTS=n
-
-# CONFIG_CC310_MBEDTLS_AES_C=n
-# CONFIG_CC310_MBEDTLS_CMAC_C=n
-
-# CONFIG_VANILLA_MBEDTLS_GCM_C=n
 
 CONFIG_MBEDTLS_CHACHA20_C=n
 CONFIG_MBEDTLS_POLY1305_C=n
